--- a/game.css
+++ b/game.css
@@ -19,16 +19,17 @@ body{
 
 #canvas {
     z-index:-1;
-    margin-left:10%;
+    margin-left:20px;
+    margin-top: 20px;
     border-style: double;
     position:absolute;
     background-color: lightgray;
-    width:40%;
-    height:45%;
+    width:800px;
+    height:500px;
   }
 
 h2{
   text-align:center;
   /*color: white;*/
 
-}
+}s
