--- a/game.css
+++ b/game.css
@@ -4,8 +4,6 @@
 
 body {
     height:100%;
-    background-color:black;
-    color:white;
   }
 
 /*div{
@@ -13,65 +11,24 @@ body {
   padding: 50px;
 }*/
 
+body{
+  /*text-align: center;*/
+  /*background-color:black;
+  color:white;*/
+}
+
 #canvas {
     z-index:-1;
-    margin-left:20px;
-    margin-top: 20px;
+    margin-left:10%;
     border-style: double;
     position:absolute;
     background-color: lightgray;
-    width:800px;
-    height:500px;
+    width:40%;
+    height:45%;
   }
 
-#cloudPic{
-  position:fixed;
-  margin-left:-199px;
-  margin-top:-40px;
-  width:500px;
-  z-index:-1;
-}
-
-#aboutPaul{
-  background-color: #FF0066;
-  margin-left:400px;
-}
-
-#aboutPaul:hover{
-  margin-top:-10px;
-}
-
-#aboutEva{
-  background-color: #E6E65C;
-  margin-left:450px;
-}
-
-#aboutEva:hover{
-  margin-top:-10px;
-}
-
-#aboutNicole{
-  background-color: #3399FF;
-  margin-left:500px;
-}
-
-#aboutNicole:hover{
-  margin-top:-10px;
-}
-
-div{
-  position:fixed;
-  border-radius: 10px;
-  margin-top:-30px;
-  padding: 10px;
-  padding-top:100px;
-  color:white;
-  width:15px;
-}
-
 h2{
-  position:fixed;
-  color: blue;
-  margin-top:90px;
+  text-align:center;
+  /*color: white;*/
 
-}s
+}
