script tags to the end and some js stuff

--- a/game.css
+++ b/game.css
@@ -22,7 +22,7 @@ body{
     margin-left:20px;
     border-style: double;
     position:absolute;
-    background-color: lightgray;
+    background-color: lavender;
     width:800px;
     height:500px;
   }
