--- a/game.css
+++ b/game.css
@@ -49,7 +49,7 @@ body {
   cursor:pointer;
 }
 
-#startButtonPic{
+#startButtonPic,#paused{
   margin-left: 400px;
   margin-top: 0px;
   height:530px;
