--- a/scoreboard-style.css
+++ b/scoreboard-style.css
@@ -13,6 +13,15 @@ table{
   padding:10px;
 }
 
+#goToGame{
+  background-color: orange;
+  margin-top:120px;
+}
+
+#goToGame:hover{
+  background-color:yellow;
+  margin-left:-20px;
+}
 
 #placedScore{
   background-color: #BEF243;
@@ -27,4 +36,29 @@ table{
   padding:5px;
   color: black;
   width:300px;
+}
+
+#goHomeDiv{
+background-color: #CC00FF;
+  margin-top:20px;
+
+}
+
+#goHomeDiv:hover{
+  background-color: #FF0066;
+  margin-left:-20px;
+}
+
+.sidetabs{
+  font-family: Times;
+  font-size: 24pt;
+  background-color:red;
+  text-align:right;
+  position:fixed;
+  border-radius: 10px;
+  margin-left:-100px;
+  padding: 5px;
+  padding-left:200px;
+  color:white;
+  width:200px;
 }
