--- a/index-style.css
+++ b/index-style.css
@@ -33,7 +33,7 @@ body {
   z-index:-1;
 }
 
-#cloudPic:hover,h2{
+#cloudPic:hover, h2{
   position:fixed;
   margin-left:-179px;
   margin-top:-30px;
@@ -137,6 +137,7 @@ h2{
   color: blue;
   margin-top:90px;
   margin-left:2px;
+  font-size:20pt;
 
 }
 
