--- a/game.css
+++ b/game.css
@@ -20,7 +20,7 @@ body {
     background-color: lavender;
   }
 
-#currentScore, #goHome, #pauseResumeGame, #submitScoreBtn, #restartGame{
+#currentScore, #goHome, #pauseResumeGame, #submitScoreBtn, #restartGame, #fallingButton, #staticButton{
   color:white;
   position:absolute;
   text-align:center;
@@ -28,6 +28,29 @@ body {
   margin-left: 100px;
   border-style:dotted;
   padding:10px;
+}
+
+#fallingButton, #staticButton{
+  margin-top:300px;
+  background-color:black;
+  z-index: 0;
+}
+
+#fallingButton{
+
+  margin-left:600px;
+
+}
+
+#staticButton{
+  margin-left: 905px;
+}
+
+#selectVersionPrompt{
+  position:absolute;
+  margin-left: 615px;
+  margin-top: 200px;
+  color:black;
 }
 
 #goHome{
