--- a/game.css
+++ b/game.css
@@ -1,3 +1,5 @@
+@import url(http://fonts.googleapis.com/css?family=Advent+Pro:400,200);
+
 *{
     margin: 0px; padding: 0;
   }
@@ -10,6 +12,7 @@ a {
 body {
   background-color:black;
   color:white;
+  font-family: 'Advent Pro', sans-serif;
 }
 
 #canvas {
@@ -169,8 +172,9 @@ cursor:pointer;
 
 }
 
-h2{
-  text-align:center;
+#logo{
+  position:relative;
+  margin-left: 712px;
   /*color: white;*/
 
 }
