--- a/index-style.css
+++ b/index-style.css
@@ -1,3 +1,5 @@
+@import url(http://fonts.googleapis.com/css?family=Advent+Pro:400,200);
+
 *{
     margin: 0px; padding: 0;
   }
@@ -6,6 +8,7 @@ body {
     height:100%;
     background-color:black;
     color:white;
+    font-family: 'Advent Pro', sans-serif;
   }
 
 #cloudPic{
