--- a/scoreboard-style.css
+++ b/scoreboard-style.css
@@ -1,10 +1,12 @@
+@import url(http://fonts.googleapis.com/css?family=Advent+Pro:400,200);
+
 body{
   background-color: black;
   color: white;
   font-family: Arial;
   font-size: 24pt;
   text-align:center;
-
+  font-family: 'Advent Pro', sans-serif;
 }
 
 table{
@@ -50,7 +52,7 @@ background-color: #CC00FF;
 }
 
 .sidetabs{
-  font-family: Times;
+  font-family: 'Advent Pro', sans-serif;
   font-size: 24pt;
   background-color:red;
   text-align:right;
